# llm-readiness

./: PassingSource.code-workspace  README.md  pyproject.toml  requirements.txt  view_database.py
llm_seo/: content_analysis.py  llm_scraper.py  openai_reporter.py
reports/: llm_seo_report_9e37f651-d6c5-4157-a903-6f14776fb3f1.txt
src/llm_seo/: checks.py  cli.py  crawler.py  llm_analysis.py  openai_scraper.py  report_generator.py  scoring.py
src/llm_seo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: base.html  index.html
tests/: __init__.py  test_checks.py  test_crawler.py  test_llm_analysis.py  test_openai_reporter.py  test_scoring.py
web-app/: app.py  pdf_generator.py  requirements.txt
