[project]
name = "llm-seo"
version = "1.0.0"
description = "A Python CLI tool to audit websites for LLM readiness"
requires-python = ">=3.8"
dependencies = [
    "click>=8.1",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "textstat>=0.7",
    "scikit-learn>=1.3",
    "nltk>=3.8",
    "openai>=1.0",
]
[tool.setuptools]
packages = ["llm_seo"]
package-dir = {"" = "src"}

[project.scripts]
llm-seo = "llm_seo.cli:audit"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
